kubernetes/App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appforsplunk
  namespace: veltrix-splunk
  labels:
    app: appforsplunk
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: appforsplunk
