kubernetes/App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appforsplunk-ingress
  namespace: veltrix-splunk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: appforsplunk.local  # You can change this to your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appforsplunk
            port:
              number: 8080
